[tool.poetry]
name = "brownie-safe"
version = "0.9.1"
description = "Build complex Gnosis Safe transactions and safely preview them in a forked environment."
authors = ["banteg"]
license = "MIT"
repository = "https://github.com/banteg/brownie-safe"
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
eth-brownie = ">=1.20.5"
safe-eth-py = ">=6.0.0b30"
trezor = ">=0.13.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ['E501']
