[tool.poetry]
name = "brownie-safe"
version = "0.9.2"
description = "Build complex Gnosis Safe transactions and safely preview them in a forked environment."
authors = ["banteg"]
license = "MIT"
repository = "https://github.com/banteg/brownie-safe"
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# eth-brownie v1.20.7 requires web3==6.15.1
eth-brownie = ">=1.20.7"
# safe-eth-py v6.0.0 renames gnosis to safe_eth
# safe-eth-py v7.0.0 requires web3>=7.0.0
safe-eth-py = ">=6.0.0,<7"
trezor = ">=0.13.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ['E501']
